# dcc-mcp-substance3d-painter

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/dcc_mcp_substance3d_painter/: __init__.py  __version__.py  dispatcher.py  plugin.py  server.py
src/dcc_mcp_substance3d_painter/painter/plugins/: dcc_mcp_substance3d_painter.py  dcc_mcp_substance3d_painter_plugin.py
src/dcc_mcp_substance3d_painter/painter/startup/: dcc_mcp_substance3d_painter_plugin.py
src/dcc_mcp_substance3d_painter/skills/painter-project/: SKILL.md  tools.yaml
src/dcc_mcp_substance3d_painter/skills/painter-project/scripts/: apply_smart_material.py  create_pbr_fill_layer.py  export_textures.py  inspect_project.py  list_export_presets.py  list_texture_sets.py  save_project_as.py  search_resources.py
tests/: test_dispatcher.py  test_material_layers.py  test_metadata.py  test_server.py  test_smart_materials.py
tools/: lint_skills.py
